Fix options sort, copy input spacing

--- a/hub-ui/src/components/CopyInput/CopyInput.module.css
+++ b/hub-ui/src/components/CopyInput/CopyInput.module.css
@@ -6,8 +6,7 @@
 .input {
   --input-height: calc(2.625rem * 1);
   height: var(--input-height);
-  border: calc(0.0625rem * var(--mantine-scale)) solid
-    var(--mantine-color-default-border);
+  border: calc(0.0625rem * var(--mantine-scale)) solid var(--mantine-color-default-border);
   border-radius: var(--mantine-radius-default);
 }
 
@@ -17,6 +16,7 @@
   min-width: 0;
   overflow: hidden;
   display: block;
+  margin-left: 8px;
 }
 
 .buttonWrapper {
@@ -30,22 +30,18 @@
   margin: 1px;
 }
 
-[data-mantine-color-scheme="dark"]
-  .button
-  svg[data-identifier="link-copy-svg"] {
+[data-mantine-color-scheme='dark'] .button svg[data-identifier='link-copy-svg'] {
   fill: var(--mantine-color-dark-0);
 }
 
-[data-mantine-color-scheme="light"]
-  .button
-  svg[data-identifier="link-copy-svg"] {
+[data-mantine-color-scheme='light'] .button svg[data-identifier='link-copy-svg'] {
   fill: var(--mantine-color-black);
 }
 
-[data-mantine-color-scheme="dark"] .button svg[data-identifier="check-svg"] {
+[data-mantine-color-scheme='dark'] .button svg[data-identifier='check-svg'] {
   stroke: var(--mantine-color-dark-0);
 }
 
-[data-mantine-color-scheme="light"] .button svg[data-identifier="check-svg"] {
+[data-mantine-color-scheme='light'] .button svg[data-identifier='check-svg'] {
   stroke: var(--mantine-color-black);
 }
